--- a/views/home.handlebars
+++ b/views/home.handlebars
@@ -1,16 +1,1 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <link rel="icon" href="data:,">
-  <title>{{title}}</title>
-</head>
-
-<body>
-
-  {{{body}}}
-
-</body>
-
-</html>
+<h1>Welcome to the {{title}} page</h1>
