feat(bootstrap): Add bootstrap to project

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,17 +4,19 @@
 <head>
   <meta charset="UTF-8">
   <title>{{title}}</title>
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-    integrity="sha384-HSMxcRTRxnN+Bdg0JdbxYKrThecOKuH5zCYotlSAcp1+c8xmyTe9GYg1l9a69psu" crossorigin="anonymous">
+  {{!-- Bootstrap CSS --}}
+  <link rel="stylesheet" href="./vendors/bootstrap/bootstrap.min.css">
+  {{!-- Personal CSS --}}
+  <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
 
   {{{body}}}
 
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-    integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd"
-    crossorigin="anonymous"></script>
+  {{!-- Bootstrap Scripts --}}
+  <script src="./vendors/bootstrap/jquery.min.js"></script>
+  <script src="./vendors/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
