fix(template): Change 'Agregar' to 'Modificar'

--- a/views/modificar.handlebars
+++ b/views/modificar.handlebars
@@ -27,7 +27,7 @@
         <option value="Comedy">Comedia</option>
       </select>
     </div>
-    <button class="btn btn-primary" type="submit">Agregar Pelicula</button>
+    <button class="btn btn-primary" type="submit">Modificar Pelicula</button>
   </form>
 
 </section>
