--- a/views/panel.handlebars
+++ b/views/panel.handlebars
@@ -22,7 +22,7 @@
           <td>{{this.title}}</td>
           <td>{{this.year}}</td>
           <td>{{this.rating}}</td>
-          <td>{{this.genere}}</td>
+          <td>{{this.genre}}</td>
           <td>
             <a href="/{{this._id}}" class="btn btn-primary">ACTUALIZAR</a>
             <button id="{{this._id}}" class="btn btn-danger">ELIMINAR</button>
