--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,9 +5,9 @@
   <meta charset="UTF-8">
   <title>{{title}}</title>
   {{!-- Bootstrap CSS --}}
-  <link rel="stylesheet" href="./vendors/bootstrap/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="/vendors/bootstrap/bootstrap.min.css">
   {{!-- Personal CSS --}}
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 
 <body class="container-fluid">
@@ -15,8 +15,8 @@
   {{{body}}}
 
   {{!-- Bootstrap Scripts --}}
-  <script src="./vendors/bootstrap/jquery.min.js"></script>
-  <script src="./vendors/bootstrap/bootstrap.bundle.min.js"></script>
+  <script src="/vendors/bootstrap/jquery.min.js"></script>
+  <script src="/vendors/bootstrap/bootstrap.bundle.min.js"></script>
 </body>
 
 </html>
