fix(): Front end works with online backend

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,6 +1,6 @@
 <h1 class="text-center my-4">Log In User</h1>
 <section class="row">
-  <form class="col-sm-5 mx-auto" action="/authenticate" action="GET">
+  <form class="col-sm-5 mx-auto" action="/authenticate" method="POST">
     <div class="form-group">
       <label for="username">Username</label>
       <input name="username" id="username" type="text">
