--- a/views/panel.handlebars
+++ b/views/panel.handlebars
@@ -1,7 +1,10 @@
-<h1 class="text-center p-5">{{heading}}</h1>
+<nav class="navbar navbar-light col-sm-10 offset-sm-1">
+  <a href="#" class="navbar-brand mr-auto">Movie Catalog</a>
+  <a href="/add" class="btn btn-success">Add Movie</a>
+  <a href="/logout" class="btn btn-outline-danger ml-2">Log Out</a>
+</nav>
 <section class="row">
   <div class="col-sm-10 offset-sm-1">
-    <a href="/add" class="btn btn-success float-right my-3">Add Movie</a>
     <table class="table">
       <thead>
         <tr class="text-center">
