--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,14 +1,17 @@
-<h1 class="text-center my-4">Log In User</h1>
-<section class="row">
-  <form class="col-sm-5 mx-auto" action="/authenticate" method="POST">
-    <div class="form-group">
-      <label for="username">Username</label>
-      <input name="username" id="username" type="text">
-    </div>
-    <div class="form-group">
-      <label for="password">Password</label>
-      <input name="password" id="password" type="password">
-    </div>
-    <button class="btn btn-primary mr-5 float-right" type="submit">Log-In</button>
-  </form>
-</section>
+<h1 class="text-center my-4">Log In</h1>
+<div class="container">
+  <section class="row">
+    <form class="col col-sm-5 mx-auto" action="/authenticate" method="POST">
+      <div class="form-group">
+        <label for="username">Username</label>
+        <input name="username" id="username" type="text">
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input name="password" id="password" type="password">
+      </div>
+      <button class="btn btn-primary ml-5 mr-5" type="submit">Log-In</button>
+      <a href="/signin" class="btn btn-outline-info">Sign In</a>
+    </form>
+  </section>
+</div>
