fix(signup): Change signin to signup.

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -11,7 +11,7 @@
         <input name="password" id="password" type="password">
       </div>
       <button class="btn btn-primary ml-5 mr-5" type="submit">Log-In</button>
-      <a href="/signin" class="btn btn-outline-info">Sign In</a>
+      <a href="/signup" class="btn btn-outline-info">Sign Up</a>
     </form>
   </section>
 </div>
