--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,7 +1,7 @@
-<h1 class="text-center my-4">Sign In</h1>
+<h1 class="text-center my-4">Sign Up</h1>
 <div class="container">
   <section class="row">
-    <form class="col col-sm-5 mx-auto" action="/signin" method="POST">
+    <form class="col col-sm-5 mx-auto" action="/signup" method="POST">
       <div class="form-group">
         <label for="name">Username</label>
         <input name="name" id="name" type="text">
@@ -18,7 +18,7 @@
         <label for="confirmPass">Verify Password</label>
         <input name="confirmPass" id="confirmPass" type="password">
       </div>
-      <button class="btn btn-primary ml-5 mr-5" type="submit">Sign In</button>
+      <button class="btn btn-primary ml-5 mr-5" type="submit">Sign Up</button>
       <a href="/login" class="btn btn-outline-info">Log In</a>
     </form>
   </section>
