--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -18,6 +18,7 @@
         <label for="confirmPass">Verify Password</label>
         <input name="confirmPass" id="confirmPass" type="password">
       </div>
+      <p>{{ message }}</p>
       <button class="btn btn-primary ml-5 mr-5" type="submit">Sign Up</button>
       <a href="/login" class="btn btn-outline-info">Log In</a>
     </form>
