--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,18 +1,37 @@
-<h1 class="text-center my-4">Log In</h1>
-<div class="container">
+<h1 class="text-center my-4">Movie Database</h1>
+<div class="container-fluid">
+  <section class="row mb-5 justify-content-center">
+    <section class="col-12 col-sm-6 col-md-6 col-lg-3">
+      <form class="form-container" action="/authenticate" method="POST">
+        <h2 class="text-center mb-4">Log In</h2>
+        <div class="form-group">
+          <label for="username">Username</label>
+          <input class="form-control" name="username" id="username" type="text">
+        </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input class="form-control" name="password" id="password" type="password">
+        </div>
+        <small class="form-text text-muted">{{message}}</small>
+        <button class="btn btn-primary btn-block mb-3" type="submit">Log In</button>
+        <a href="/signup" class="d-block text-center text-info">Sign Up</a>
+      </form>
+
+    </section>
+  </section>
   <section class="row">
-    <form class="col col-sm-5 mx-auto" action="/authenticate" method="POST">
-      <div class="form-group">
-        <label for="username">Username</label>
-        <input name="username" id="username" type="text">
-      </div>
-      <div class="form-group">
-        <label for="password">Password</label>
-        <input name="password" id="password" type="password">
-      </div>
-      <p>{{message}}</p>
-      <button class="btn btn-primary ml-5 mr-5" type="submit">Log-In</button>
-      <a href="/signup" class="btn btn-outline-info">Sign Up</a>
-    </form>
+    <div class="col col-sm-5 mx-auto bg-light p-4 rounded border border-info">
+      <h3 class="mb-3">If you want to try out the API...</h3>
+      <p>Log in as a user by using the following credentials:</p>
+      <ul>
+        <li><strong>username:</strong> test-user</li>
+        <li><strong>password:</strong> user12345</li>
+      </ul>
+      <p>Log in as an administrator by using the following credentials:</p>
+      <ul>
+        <li><strong>username:</strong> test-admin</li>
+        <li><strong>password:</strong> admin12345</li>
+      </ul>
+    </div>
   </section>
 </div>
