--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,26 +1,29 @@
-<h1 class="text-center my-4">Sign Up</h1>
-<div class="container">
-  <section class="row">
-    <form class="col col-sm-5 mx-auto" action="/signup" method="POST">
-      <div class="form-group">
-        <label for="name">Username</label>
-        <input name="name" id="name" type="text">
-      </div>
-      <div class="form-group">
-        <label for="email">Email</label>
-        <input name="email" id="email" type="email">
-      </div>
-      <div class="form-group">
-        <label for="pass">Password</label>
-        <input name="pass" id="pass" type="password">
-      </div>
-      <div class="form-group">
-        <label for="confirmPass">Verify Password</label>
-        <input name="confirmPass" id="confirmPass" type="password">
-      </div>
-      <p>{{ message }}</p>
-      <button class="btn btn-primary ml-5 mr-5" type="submit">Sign Up</button>
-      <a href="/login" class="btn btn-outline-info">Log In</a>
-    </form>
+<h1 class="text-center my-4">Movie Database</h1>
+<div class="container-fluid">
+  <section class="row mb-5 justify-content-center">
+    <section class="col-12 col-sm-6 col-md-6 col-lg3">
+      <form class="form-container" action="/signup" method="POST">
+        <h2 class="text-center mb-4">Sign Up</h2>
+        <div class="form-group">
+          <label for="name">Username</label>
+          <input class="form-control" name="name" id="name" type="text">
+        </div>
+        <div class="form-group">
+          <label for="email">Email</label>
+          <input class="form-control" name="email" id="email" type="email">
+        </div>
+        <div class="form-group">
+          <label for="pass">Password</label>
+          <input class="form-control" name="pass" id="pass" type="password">
+        </div>
+        <div class="form-group">
+          <label for="confirmPass">Verify Password</label>
+          <input class="form-control" name="confirmPass" id="confirmPass" type="password">
+        </div>
+        <small class="form-text text-muted">{{ message }}</small>
+        <button class="btn btn-primary btn-block mb-3" type="submit">Sign Up</button>
+        <a href="/login" class="d-block text-center text-info">Log In</a>
+      </form>
+    </section>
   </section>
 </div>
