--- a/views/admin-panel.handlebars
+++ b/views/admin-panel.handlebars
@@ -5,32 +5,34 @@
 </nav>
 <section class="row">
   <div class="col-sm-10 offset-sm-1">
-    <table class="table">
-      <thead>
-        <tr class="text-center">
-          <th width="5%">ID</th>
-          <th width="20%">TITLE</th>
-          <th width="20%">YEAR</th>
-          <th width="10%">RATING</th>
-          <th width="20%">GENRE</th>
-          <th width="35%">ACTIONS</th>
-        </tr>
-      </thead>
-      <tbody>
-        {{#each movies}}
-        <tr class="text-center">
-          <td>{{this._id}}</td>
-          <td>{{this.title}}</td>
-          <td>{{this.year}}</td>
-          <td>{{this.rating}}</td>
-          <td>{{this.genre}}</td>
-          <td>
-            <a href="/change/{{this._id}}" class="btn btn-primary">UPDATE</a>
-            <a href="/delete/{{this._id}}" class="btn btn-danger">DELETE</a>
-          </td>
-        </tr>
-        {{/each}}
-      </tbody>
-    </table>
+    <div class="table-responsive">
+      <table class="table table-hover">
+        <thead>
+          <tr class="text-center">
+            <th class="text-left" scope="col" width="5%">ID</th>
+            <th class="text-left" scope="col" width="20%">TITLE</th>
+            <th scope="col" width="20%">YEAR</th>
+            <th scope="col" width="10%">RATING</th>
+            <th scope="col" width="20%">GENRE</th>
+            <th scope="col" width="35%">ACTIONS</th>
+          </tr>
+        </thead>
+        <tbody>
+          {{#each movies}}
+          <tr class="text-center">
+            <td class="text-left align-middle">{{this._id}}</td>
+            <td class="font-weight-bold text-left align-middle">{{this.title}}</td>
+            <td class="align-middle">{{this.year}}</td>
+            <td class="align-middle">{{this.rating}}</td>
+            <td class="align-middle">{{this.genre}}</td>
+            <td class="align-middle">
+              <a href="/change/{{this._id}}" class="btn btn-primary">UPDATE</a>
+              <a href="/delete/{{this._id}}" class="btn btn-danger">DELETE</a>
+            </td>
+          </tr>
+          {{/each}}
+        </tbody>
+      </table>
+    </div>
   </div>
 </section>
